# clockwork

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  atom-sftp-sync.json  cmake_install.cmake  example.md  main
.devcontainer/: Dockerfile  devcontainer.json
config/: default.cfg
docs/: building.md  configuration.md  controller.md  customizing.md  environment.md  firstrun.md  prerequisites.md  troubleshooting.md  workflow.md
graphs/batch_size_inference/: batch_size_inference.py  batch_size_inference_sample.csv
graphs/elasticity/: elasticity.py
graphs/fairness/: avg_success_ratio_sample.csv  fairness_data_sample.csv  fairness_graph.py
graphs/high_low_demand/: high_low_demand.py  highlowdemand_sample.csv
graphs/moneygraph/: money_graph.py
graphs/moneygraph/data/money_graph/: amazon_gpu_cost.csv  amazon_gpu_latency.csv  google_cpu_cost.csv  google_cpu_latency.csv  ideal_cpu_cost.csv  ideal_gpu_latency.csv
graphs/predictability/: inference_predictability_sample.csv  model_load_predictability_sample.csv  predictability.py
graphs/resource_utilization/: resource_utilization.py
graphs/startup_times/: startup.py
graphs/tightening_slos/: tightening_data_sample.csv  tightening_slos.py
include/clockwork/: alternatives.h  basic_threadpool.h  client.h  clockwork.h  clockwork_queue.h  clockworkruntime.h  cuda.h  decoupledruntime.h  example.h  executor.h  greedyruntime.h  manager.h  memory_manager.h  model.h  model_manager.h  modeldata.h  modeldef.h  net_client.h  net_clockwork.h  net_messages.h  net_rpc.h  network.h  pagedmodeldef.h  queue.h  runtime.h  serializedmodel.h  task.h  telemetry.h  threadpoolruntime.h  tvm_util.h  util.h
include/clockwork/api/: api_common.h  client_api.h  worker_api.h
include/clockwork/tvm/: decoupled_graph_runtime.h
profile/clockwork/profile/: check.cpp  compression.cpp
profile/clockwork/profile/alternatives/: profilegreedy.cpp
profile/clockwork/profile/model/: profilecuda.cpp  profilemodel.cpp
proto/: clockwork.proto
resources/inputs/: README
resources/resnet18_tesla-m40/: model.1.clockwork  model.16.clockwork  model.2.clockwork  model.4.clockwork  model.8.clockwork  model.input  model.output
resources/resnet18_tesla-m40_batchsize1/: model.1.clockwork  model.measurements
src/: check_model.cpp  client.cpp  clockwork.proto  controller.cpp  convert.cpp  cudafatbin.cc  inflate.cpp  main.cc  main2.cc  simpleclient.cpp  testmemory.cpp  worker.cpp  worker_dummy.cpp
src/client/: main.cc
src/clockwork/: action.cpp  action.h  action_dummy.cpp  action_dummy.h  basic_threadpool.h  cache.cpp  cache.h  client.cpp  clockwork_queue.cpp  clockworkruntime.cpp  clockworkruntime.h  common.cpp  common.h  config.cpp  config.h  cuda.cpp  cuda.h  decoupledruntime.cpp  decoupledruntime.h  example.cc  executor.h  greedyruntime.cpp  greedyruntime.h  manager.cc  manager2.cpp  manager2.h  memfile.cpp  memfile.h  memory.cpp  memory.h  memory_dummy.cpp  memory_dummy.h  model.cpp  model_manager.cc  model_manager.h  priority_queue.h  queue.h  runtime.cpp  runtime.h  runtime_dummy.cpp  (+23 more)
src/clockwork-convert/: clockwork_model.h  convert.cpp  convert_to_paged.h  cudafatbin.cc  tvm_abstract_model.cpp  tvm_abstract_model.h  tvm_model.cpp  tvm_model.h
src/clockwork-convert/tvm/: decoupled_graph_runtime.cc  decoupled_graph_runtime.h
src/clockwork/alternatives/: greedyruntime.cpp  greedyruntime.h  model_manager.cpp  model_manager.h  runtime_model.cpp  runtime_model.h  threadpoolruntime.cpp  threadpoolruntime.h  worker.cpp  worker.h
src/clockwork/api/: client_api.cpp  worker_api.cpp
src/clockwork/controller/: best_effort_controller.cpp  best_effort_controller.h  cache_aware_fifo_controller.cpp  cache_aware_fifo_controller.h  closed_loop_controller.cpp  closed_loop_controller.h  concurrent_infer_and_load_scheduler.cpp  concurrent_infer_and_load_scheduler.h  controller.cpp  controller.h  direct_controller.cpp  fifo_controller.cpp  fifo_controller.h  infer_and_load_scheduler.cpp  infer_and_load_scheduler.h  infer_only_scheduler.cpp  infer_only_scheduler.h  infer_only_scheduler_2.cpp  infer_only_scheduler_2.h  load_tracker.cpp  load_tracker.h  random_controller.cpp  random_controller.h  scheduler.h  smart_scheduler.cpp  smart_scheduler.h  stress_test_controller.h
src/clockwork/controller/infer5/: infer5_scheduler.cpp  infer5_scheduler.h
src/clockwork/dummy/: action_dummy.cpp  action_dummy.h  memory_dummy.cpp  worker_dummy.cpp  worker_dummy.h
src/clockwork/dummy/clockwork/: action_dummy.cpp  (+5 more)
src/clockwork/model/: batched.cpp  batched.h  cuda.cpp  cuda.h  memfile.cpp  memfile.h  memory.cpp  memory.h  model.cpp  model.h  model_impl.cpp  model_impl.h  model_impl2.cpp  model_impl2.h  so.cpp  so.h
src/clockwork/multitenant/: README.md  executor.cc  manager.cc
src/clockwork/network/: client.cpp  client.h  client_api.cpp  client_api.h  client_net.cpp  client_net.h  controller.cpp  controller.h  message.h  message_conn.cc  message_tx.cc  net_rpc.h  network.cpp  network.h  rpc.h  worker.cpp  worker.h  worker_api.h  worker_dummy.cpp  worker_dummy.h  worker_net.cpp  worker_net.h
src/clockwork/telemetry/: action_telemetry_logger.h  client_telemetry_logger.h  controller_action_logger.h  controller_request_logger.h  task_telemetry_logger.h  telemetry.cpp
src/clockwork/tvm/: decoupled_graph_runtime.cc  meta_data.h
src/clockwork/util/: shmem.h  tvm_util.cpp  util.cpp  util.h
src/clockwork/workload/: azure.h  example.h  slo.h  workload.cpp  workload.h
src/network/: client_net.cpp  clockwork.proto  message_rx.cc  message_tx.cc  netclient.cpp  netcontroller.cpp  worker_net.cpp
src/server/: main.cc
test/clockwork/: testmemory.cpp
test/clockwork/model/: testmemory.cpp  testmodel.cpp
test/clockwork/test/: actions.cpp  actions.h  telemetry.h  testaction.cpp  testcache.cpp  testclient.cpp  testconfig.cpp  testmemory.cpp  testnetwork.cpp  testpriorityqueue.cpp  testtask.cpp  testtelemetry.cpp  testutil.cpp  testworker.cpp  util.cpp  util.h
test/clockwork/test_dummy/: actions.cpp  actions.h  testaction.cpp  testmemory.cpp  testworker.cpp
(+4 files in other folders)
